--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@ohkit/utils",
   "version": "0.0.1-beta.0",
-  "description": "hcm-utils",
+  "description": "some utils",
   "keywords": [
-    "hcm-utils"
+    "@ohkit",
+    "utils"
   ],
   "author": "wuqiuyang <wuqiuyang305@126.com>",
   "homepage": "",
@@ -27,7 +28,7 @@
     "build": "npm run clean && microbundle --jsx React.createElement",
     "dev": "npm run watch",
     "watch": "microbundle watch --jsx React.createElement",
-    "clean": "rimraf dist"
+    "clean": "rm -rf dist"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
