--- a/src/components/text-ellipsis/package.json
+++ b/src/components/text-ellipsis/package.json
@@ -31,7 +31,8 @@
     "@ohkit/utils": "0.0.1-beta.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
