--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -30,12 +30,16 @@
     "watch": "microbundle watch --jsx React.createElement",
     "clean": "rm -rf dist"
   },
+  "dependencies": {
+    "classnames": "^2.5.1"
+  },
+  "devDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "lodash-es": "^4.17.21"
-  },
-  "dependencies": {
-    "classnames": "^2.5.1"
   }
 }
