--- a/package.json
+++ b/package.json
@@ -4,28 +4,32 @@
   "private": true,
   "scripts": {
     "site": "npm run next:dev & npm run storybook:dev",
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "npm run lerna:dev & npm run site",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "next:dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
     "next:build": "next build",
+    "next:start": "next start",
+    "next:lint": "next lint",
     "storybook:dev": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "lerna:dev": "lerna run dev --parallel --no-private",
     "lerna:build": "lerna run build --no-private",
     "lerna:bootstrap": "lerna bootstrap -- --legacy-peer-deps",
-    "plop": "cross-env NODE_OPTIONS='--import tsx' plop --plopfile=.plop/index.ts"
+    "plop": "cross-env NODE_OPTIONS='--import tsx' plop --plopfile=.plop/index.ts",
+    "i": "node ./scripts/install-deps.js",
+    "i-d": "node ./scripts/install-deps.js -D"
   },
   "dependencies": {
     "@ohkit/text-ellipsis": "0.0.1-beta.0",
     "framer-motion": "^11.15.0",
     "lodash-es": "^4.17.21",
     "next": "15.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@chromatic-com/storybook": "^3.2.2",
     "@jridgewell/gen-mapping": "0.3.5",
     "@storybook/addon-essentials": "^8.4.7",
@@ -35,6 +39,9 @@
     "@storybook/nextjs": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@storybook/test": "^8.4.7",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18.2.0",
@@ -45,6 +52,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "eslint-plugin-storybook": "^0.11.1",
+    "jest": "^30.0.3",
     "lerna": "^5.6.2",
     "microbundle": "^0.15.1",
     "next-mdx-remote": "^5.0.0",
