--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lerna:dev": "lerna run dev --parallel --no-private",
     "lerna:build": "lerna run build --no-private",
     "lerna:bootstrap": "lerna bootstrap -- --legacy-peer-deps",
+    "lerna:publish": "lerna publish --no-private",
     "plop": "cross-env NODE_OPTIONS='--import tsx' plop --plopfile=.plop/index.ts",
     "i": "node ./scripts/install-deps.js",
     "i-d": "node ./scripts/install-deps.js -D"
