--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -22,7 +22,12 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmmirror.com/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WuQiuYang/ohkit"
   },
   "scripts": {
     "build": "npm run clean && microbundle --jsx React.createElement",
@@ -38,8 +43,9 @@
     "react-dom": "^18.3.1"
   },
   "peerDependencies": {
+    "lodash-es": "^4.17.21",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "lodash-es": "^4.17.21"
-  }
+    "react-dom": ">=16.8.0"
+  },
+  "gitHead": "3d62d95c06d9a8e0e52d68c924960e3b48d82238"
 }
