--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "eslint-config-next": "15.0.4",
     "eslint-plugin-storybook": "^0.11.1",
     "jest": "^30.0.3",
+    "jest-environment-jsdom": "^30.0.4",
+    "jest-transform-stub": "^2.0.0",
     "lerna": "^5.6.2",
     "microbundle": "^0.15.1",
     "next-mdx-remote": "^5.0.0",
