--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/utils",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1-beta.1",
   "description": "some utils",
   "keywords": [
     "@ohkit",
@@ -36,15 +36,11 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/async": "^0.0.1-beta.0",
-    "@ohkit/auto-reporter": "^0.0.1-beta.0",
-    "@ohkit/platform": "^0.0.1-beta.0",
-    "@ohkit/react-helper": "^0.0.1-beta.0",
-    "@ohkit/prefix-classname": "^0.0.1-beta.0"
-  },
-  "devDependencies": {
-  },
-  "peerDependencies": {
+    "@ohkit/async": "0.0.1-beta.0",
+    "@ohkit/auto-reporter": "0.0.1-beta.0",
+    "@ohkit/platform": "0.0.1-beta.0",
+    "@ohkit/prefix-classname": "0.0.1-beta.0",
+    "@ohkit/react-helper": "0.0.1-beta.0"
   },
   "gitHead": "3d62d95c06d9a8e0e52d68c924960e3b48d82238"
 }
