--- a/src/utils/packages/auto-reporter/package.json
+++ b/src/utils/packages/auto-reporter/package.json
@@ -2,7 +2,9 @@
   "name": "@ohkit/auto-reporter",
   "version": "0.0.1-beta.0",
   "description": "数据变更上报控制器",
-  "keywords": ["auto-reporter"],
+  "keywords": [
+    "auto-reporter"
+  ],
   "homepage": "",
   "license": "ISC",
   "source": "src/index.@(js|jsx|mjs|ts|tsx)",
@@ -28,10 +30,6 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/async": "^0.0.1-beta.0"
-  },
-  "devDependencies": {
-  },
-  "peerDependencies": {
+    "@ohkit/async": "0.0.1-beta.0"
   }
 }
