--- a/src/components/measure/package.json
+++ b/src/components/measure/package.json
@@ -19,7 +19,8 @@
     "test": "__tests__"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
