chore: update script & readme

--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "site": "npm run next:dev & npm run storybook:dev",
-    "dev": "npm run lerna:dev & npm run site",
+    "site": "npm run dev:next & npm run dev:storybook",
+    "dev": "npm run dev:lerna & npm run site",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "next:dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
-    "next:build": "next build",
-    "next:start": "next start",
-    "next:lint": "next lint",
-    "storybook:dev": "storybook dev -p 6006",
-    "storybook:build": "storybook build",
-    "lerna:dev": "lerna run dev --parallel --no-private",
-    "lerna:build": "lerna run build --no-private",
+    "dev:next": "NODE_OPTIONS='--inspect' next dev --turbopack",
+    "build:next": "next build",
+    "start:next": "next start",
+    "lint:next": "next lint",
+    "dev:storybook": "storybook dev -p 6006",
+    "build:storybook": "storybook build",
+    "dev:lerna": "lerna run dev --parallel --no-private",
+    "build:lerna": "lerna run build --no-private",
     "lerna:bootstrap": "lerna bootstrap -- --legacy-peer-deps",
     "lerna:publish": "lerna publish --no-private --exact --registry=https://registry.npmjs.org/",
-    "lerna:release": "npm run test && npm run lerna:build && npm run lerna:publish",
+    "lerna:release": "npm run test && npm run build:lerna && npm run lerna:publish",
     "plop": "cross-env NODE_OPTIONS='--import tsx' plop --plopfile=.plop/index.ts",
     "i": "node ./scripts/install-deps.js",
     "i-d": "node ./scripts/install-deps.js -D"
