--- a/src/utils/packages/react-helper/package.json
+++ b/src/utils/packages/react-helper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/react-helper",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1",
   "description": "some utils and hooks for react",
   "keywords": [
     "react-helper"
@@ -30,9 +30,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/platform": "0.0.1-beta.0"
-  },
-  "devDependencies": {
+    "@ohkit/platform": "0.0.1"
   },
   "peerDependencies": {
     "lodash-es": "^4.17.21",
