--- a/src/utils/packages/auto-reporter/package.json
+++ b/src/utils/packages/auto-reporter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/auto-reporter",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1",
   "description": "数据变更上报控制器",
   "keywords": [
     "auto-reporter"
@@ -30,6 +30,6 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/async": "0.0.1-beta.0"
+    "@ohkit/async": "0.0.1"
   }
 }
