--- a/src/utils/packages/prefix-classname/package.json
+++ b/src/utils/packages/prefix-classname/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/prefix-classname",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1",
   "description": "add prefix for classnames",
   "keywords": [
     "prefix-classname"
