--- a/src/components/text-ellipsis/package.json
+++ b/src/components/text-ellipsis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/text-ellipsis",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "text ellipsis for react",
   "keywords": [
     "text ellipsis"
