--- a/src/components/text-ellipsis/package.json
+++ b/src/components/text-ellipsis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/text-ellipsis",
-  "version": "0.0.2-alpha.4",
+  "version": "0.0.2",
   "description": "text ellipsis for react",
   "keywords": [
     "text ellipsis"
@@ -32,8 +32,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/measure": "0.0.1",
-    "@ohkit/utils": "0.0.1"
+    "@ohkit/measure": "0.0.2",
+    "@ohkit/utils": "0.0.2"
   },
   "devDependencies": {
     "react": "^18.3.1",
