--- a/src/utils/packages/prefix-classname/package.json
+++ b/src/utils/packages/prefix-classname/package.json
@@ -10,8 +10,8 @@
   "source": "src/index.@(js|jsx|mjs|ts|tsx)",
   "main": "dist/index.js",
   "umd:main": "dist/index.umd.js",
-  "module": "dist/index.module.js",
-  "types": "dist/index.d.ts",
+  "module": "dist/index.es.js",
+  "types": "dist/types/index.d.ts",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
@@ -23,7 +23,7 @@
   "scripts": {
     "build": "npm run clean && microbundle --jsx React.createElement",
     "dev": "npm run watch",
-    "watch": "microbundle watch --jsx React.createElement  --no-compress",
+    "watch": "microbundle watch --jsx React.createElement --no-compress --format es --output dist/index.es.js",
     "clean": "rm -rf dist"
   },
   "dependencies": {
