--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "lodash-es": "^4.17.21",
     "next": "15.0.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@ant-design/icons": "^6.0.0",
@@ -49,6 +52,7 @@
     "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "antd": "^5.22.5",
     "classnames": "^2.5.1",
     "cross-env": "^7.0.3",
