feat: [utils] add stories plop

--- a/src/utils/packages/auto-reporter/tsconfig.json
+++ b/src/utils/packages/auto-reporter/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"],
+  "include": ["src", "Doc.mdx"],
   "exclude": ["**/__tests__/**", "dist", "node_modules"]
 }
