--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/utils",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.0",
   "description": "some utils",
   "keywords": [
     "@ohkit",
@@ -33,13 +33,13 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/async": "0.0.2",
-    "@ohkit/auto-reporter": "0.0.2",
-    "@ohkit/debug": "0.0.2",
-    "@ohkit/json-helper": "0.0.2",
-    "@ohkit/platform": "0.0.2",
-    "@ohkit/prefix-classname": "0.0.2",
-    "@ohkit/react-helper": "0.0.2"
+    "@ohkit/async": "0.0.3-alpha.0",
+    "@ohkit/auto-reporter": "0.0.3-alpha.0",
+    "@ohkit/debug": "0.0.3-alpha.0",
+    "@ohkit/json-helper": "0.0.3-alpha.0",
+    "@ohkit/platform": "0.0.3-alpha.0",
+    "@ohkit/prefix-classname": "0.0.3-alpha.0",
+    "@ohkit/react-helper": "0.0.3-alpha.0"
   },
   "gitHead": "3d62d95c06d9a8e0e52d68c924960e3b48d82238"
 }
