--- a/src/utils/packages/react-helper/package.json
+++ b/src/utils/packages/react-helper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/react-helper",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.0",
   "description": "some utils and hooks for react",
   "keywords": [
     "react-helper"
@@ -27,7 +27,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/platform": "0.0.2"
+    "@ohkit/platform": "0.0.3-alpha.0"
   },
   "peerDependencies": {
     "lodash-es": "^4.17.21",
