--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/utils",
-  "version": "0.0.3-alpha.1",
+  "version": "0.0.3",
   "description": "some utils",
   "keywords": [
     "@ohkit",
@@ -39,7 +39,7 @@
     "@ohkit/json-helper": "0.0.3-alpha.0",
     "@ohkit/platform": "0.0.3-alpha.0",
     "@ohkit/prefix-classname": "0.0.3-alpha.0",
-    "@ohkit/react-helper": "0.0.3-alpha.1"
+    "@ohkit/react-helper": "0.0.3"
   },
   "gitHead": "3d62d95c06d9a8e0e52d68c924960e3b48d82238"
 }
