--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "sass": "^1.82.0",
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.1",
     "tsx": "^4.19.3",
     "typescript": "^4"
   },
