--- a/src/utils/packages/debug/package.json
+++ b/src/utils/packages/debug/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/debug",
-  "version": "0.0.3-alpha.0",
+  "version": "0.0.3",
   "description": "print debug log or tips",
   "keywords": [
     "debug"
