--- a/src/components/text-ellipsis/package.json
+++ b/src/components/text-ellipsis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/text-ellipsis",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "text ellipsis for react",
   "keywords": [
     "text ellipsis"
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "@ohkit/measure": "^0.0.3",
-    "@ohkit/platform": "^0.0.3-alpha.0",
-    "@ohkit/prefix-classname": "^0.0.3-alpha.0",
-    "@ohkit/react-helper": "^0.0.3"
+    "@ohkit/platform": "0.0.3",
+    "@ohkit/prefix-classname": "0.0.3",
+    "@ohkit/react-helper": "0.0.4"
   },
   "devDependencies": {
     "react": "^18.3.1",
