--- a/src/utils/packages/async/package.json
+++ b/src/utils/packages/async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/async",
-  "version": "0.0.3-alpha.0",
+  "version": "0.0.3",
   "description": "some async utils",
   "keywords": [
     "async"
