--- a/src/utils/packages/platform/package.json
+++ b/src/utils/packages/platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/platform",
-  "version": "0.0.3-alpha.0",
+  "version": "0.0.3",
   "description": "常用的宿主环境判断方法,考虑SSR场景",
   "keywords": [
     "platform"
