--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -39,7 +39,8 @@
     "@ohkit/json-helper": "0.0.3",
     "@ohkit/platform": "0.0.3",
     "@ohkit/prefix-classname": "0.0.3",
-    "@ohkit/react-helper": "0.0.4"
+    "@ohkit/react-helper": "0.0.4",
+    "@ohkit/dom-helper": "0.0.1-beta.0"
   },
   "gitHead": "3d62d95c06d9a8e0e52d68c924960e3b48d82238"
 }
