--- a/src/components/text-ellipsis/package.json
+++ b/src/components/text-ellipsis/package.json
@@ -35,7 +35,8 @@
     "@ohkit/measure": "^0.0.3",
     "@ohkit/platform": "0.0.3",
     "@ohkit/prefix-classname": "0.0.3",
-    "@ohkit/react-helper": "0.0.4"
+    "@ohkit/react-helper": "0.0.4",
+    "@ohkit/dom-helper": "0.0.1-beta.0"
   },
   "devDependencies": {
     "react": "^18.3.1",
