--- a/src/components/text-ellipsis/package.json
+++ b/src/components/text-ellipsis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/text-ellipsis",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "text ellipsis for react",
   "keywords": [
     "text ellipsis"
@@ -32,11 +32,11 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/measure": "^0.0.3",
+    "@ohkit/dom-helper": "0.0.1",
+    "@ohkit/measure": "0.0.4",
     "@ohkit/platform": "0.0.3",
     "@ohkit/prefix-classname": "0.0.3",
-    "@ohkit/react-helper": "0.0.4",
-    "@ohkit/dom-helper": "0.0.1-beta.0"
+    "@ohkit/react-helper": "0.0.4"
   },
   "devDependencies": {
     "react": "^18.3.1",
