--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohkit/utils",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "some utils",
   "keywords": [
     "@ohkit",
@@ -34,13 +34,13 @@
   },
   "dependencies": {
     "@ohkit/async": "0.0.3",
-    "@ohkit/auto-reporter": "0.0.3",
+    "@ohkit/auto-reporter": "0.0.4",
     "@ohkit/debug": "0.0.3",
+    "@ohkit/dom-helper": "0.0.1",
     "@ohkit/json-helper": "0.0.3",
     "@ohkit/platform": "0.0.3",
     "@ohkit/prefix-classname": "0.0.3",
-    "@ohkit/react-helper": "0.0.4",
-    "@ohkit/dom-helper": "0.0.1-beta.0"
+    "@ohkit/react-helper": "0.0.4"
   },
   "gitHead": "3d62d95c06d9a8e0e52d68c924960e3b48d82238"
 }
