--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,5 @@
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-require-imports": "warn"
   },
-  "exclude": ["**/node_modules", "__tests__"]
+  "exclude": ["**/node_modules", "__tests__", "_share-to-team/**/*"]
 }
