--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "site": "npm run dev:next & npm run dev:storybook",
     "dev": "npm run dev:lerna & npm run site",
+    "watch:storybook": "npm run dev:lerna & npm run dev:storybook",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -24,7 +25,7 @@
     "i-d": "node ./scripts/install-deps.js -D"
   },
   "dependencies": {
-    "@ohkit/text-ellipsis": "0.0.1-beta.0",
+    "@ohkit/text-ellipsis": "^0.0.9",
     "framer-motion": "^11.15.0",
     "lodash-es": "^4.17.21",
     "next": "15.0.4",
