--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,12 +31,13 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     ".next/types/**/*.ts",
   ],
   "exclude": [
     "**/node_modules/**",
-    "**/__tests__/**"
+    "**/__tests__/**",
+    "_share-to-team/**/*",
   ]
 }
