--- a/lerna.json
+++ b/lerna.json
@@ -10,5 +10,10 @@
   ],
   "publish": {
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "ignoreChanges": [
+    "**/*.stories.*",
+    "**/*.test.*",
+    "**/__test__/**"
+  ]
 }
